# FreeRTOS-Kernel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  FreeRTOS-Kernel-V11.3.0-repository-SPDX2.3.spdx  FreeRTOS-Kernel-V11.3.0-repository-SPDX2.3.spdx.json  FreeRTOS-Kernel-V11.3.0-repository-SPDX2.3.spdx.xml  FreeRTOS-Kernel-V11.3.0-repository-SPDX2.3.spdx.yaml  History.txt  MISRA.md  PULL_REQUEST_PROCESS.md  PULL_REQUEST_WORKFLOW.md  Quick_Start_Guide.url  README.md  SECURITY.md  croutine.c  cspell.config.yaml  event_groups.c  freertos_smp_granular_locks_design.md  granular_locks_prev.md  granular_locks_v4.md  lexicon.txt  list.c  macro_tasks.c  main_opt_tasks.c  manifest.yml  neopix.c  old_list.c  queue.c  sbom.spdx  skip_list.c  skip_list.h  stream_buffer.c  stream_buffer_ext.c  tasks.c  test_skip_list.c  timers.c  workqueue.c
examples/cmake_example/: CMakeLists.txt  main.c
examples/codesonar/: CMakeLists.txt  README.md  codesonar.conf
examples/coverity/: CMakeLists.txt  FreeRTOSConfig.h  README.md  coverity_misra.config  kernel_misra.config
examples/coverity/configuration/: FreeRTOSConfig.h
examples/coverity_example/: CMakeLists.txt  kernel_misra.config
examples/coverity_example/configuration/: FreeRTOSConfig.h
minimal_freertos_example/: CMakeLists.txt  main.c
portable/: CMakeLists.txt
portable/ARMv8M/: ReadMe.txt  copy_files.py
portable/ARMv8M/non_secure/: ReadMe.txt  port.c  portasm.h  portmacrocommon.h
portable/ARMv8M/secure/: ReadMe.txt
portable/CCRH/F1Kx/: README.md  port.c  portasm.s  portmacro.h
portable/CCS/ARM_CM3/: port.c  portasm.asm  portmacro.h
portable/CCS/ARM_CM4F/: port.c  portasm.asm  portmacro.h
portable/CCS/ARM_Cortex-R4/: port.c  portASM.asm  portmacro.h
portable/CCS/MSP430X/: data_model.h  port.c  portext.asm  portmacro.h
portable/CodeWarrior/ColdFire_V1/: port.c  portasm.S  portmacro.h
portable/CodeWarrior/ColdFire_V2/: port.c  portasm.S  portmacro.h
portable/CodeWarrior/HCS12/: port.c  portmacro.h
portable/Common/: mpu_wrappers.c  mpu_wrappers_v2.c
portable/GCC/: kernel_compile_options.cmake
portable/GCC/ARM7_AT91FR40008/: port.c  portISR.c  portmacro.h
portable/GCC/ARM7_AT91SAM7S/: AT91SAM7X256.h  ioat91sam7x256.h  lib_AT91SAM7X256.c  lib_AT91SAM7X256.h  port.c  portISR.c  portmacro.h
portable/GCC/ARM7_LPC2000/: port.c  portISR.c  portmacro.h
portable/GCC/ARM7_LPC23xx/: port.c  portISR.c  portmacro.h
portable/GCC/ARM_AARCH64/: README.md  port.c  portASM.S  portmacro.h
portable/GCC/ARM_AARCH64_ARMV9/: README.md  mte_port.c  port.c  portASM.S  portmacro.h
portable/GCC/ARM_AARCH64_SRE/: README.md  port.c  portASM.S  portmacro.h
portable/GCC/ARM_CA53_64_BIT/: README.md  port.c  portASM.S  portmacro.h
portable/GCC/ARM_CA53_64_BIT_SRE/: README.md  port.c  portASM.S  portmacro.h
portable/GCC/ARM_CA9/: port.c  portASM.S  portmacro.h
portable/GCC/ARM_CM0/: mpu_wrappers_v2_asm.c  port.c  portasm.c  portasm.h  portmacro.h
portable/GCC/ARM_CM0_MPU/: port.c  portasm.c
portable/GCC/ARM_CM3/: port.c  portmacro.h
portable/GCC/ARM_CM3_MPU/: mpu_wrappers_v2_asm.c  port.c  portmacro.h
portable/GCC/ARM_CM4F/: port.c  portmacro.h
portable/GCC/ARM_CM4_MPU/: mpu_wrappers_v2_asm.c  port.c  portmacro.h
portable/GCC/ARM_CR5/: port.c  portASM.S  portmacro.h
portable/GCC/ARM_CR82/: README.md  mpu_wrappers_v2_asm.c  port.c  portASM.S  portmacro.h
portable/GCC/ARM_CRx_MPU/: .clang-format  mpu_wrappers_v2_asm.S  mpu_wrappers_v2_asm.h  port.c  portASM.S  portmacro.h  portmacro_asm.h
portable/GCC/ARM_CRx_No_GIC/: port.c  portASM.S  portmacro.h
portable/GCC/ATMega323/: port.c  portmacro.h
portable/GCC/ATMega328P/: port.c
portable/GCC/ATmegaxxxx/: port.c  portmacro.h  readme.md
portable/GCC/AVR32_UC3/: exception.S  port.c  portmacro.h
portable/GCC/AVR_AVRDx/: port.c  port.c.bak  porthardware.h  portmacro.h  portmacro.h.bak
portable/GCC/AVR_Mega0/: port.c  porthardware.h  portmacro.h
portable/GCC/Arm_AARCH64/: port.c  portASM.S  portmacro.h
portable/GCC/Arm_AARCH64_SRE/: README.md  port.c  portASM.S  portmacro.h
portable/GCC/CORTUS_APS3/: port.c  portmacro.h
portable/GCC/ColdFire_V2/: port.c  portasm.S  portmacro.h
portable/GCC/H8S2329/: port.c  portmacro.h
portable/GCC/HCS12/: port.c  portmacro.h
portable/GCC/IA32_flat/: ISR_Support.h  port.c  portASM.S  portmacro.h
portable/GCC/MCF5235/: port.c  portmacro.h  readme.md
portable/GCC/MSP430F449/: port.c  portmacro.h
portable/GCC/MSP430FR5969/: port.c  portmacro.h
portable/GCC/MicroBlaze/: port.c  portasm.s  portmacro.h
portable/GCC/MicroBlazeV8/: port.c  port_exceptions.c  portasm.S  portmacro.h
portable/GCC/MicroBlazeV9/: port.c  port_exceptions.c  portasm.S  portmacro.h  portmicroblaze.c
portable/GCC/NiosII/: port.c  port_asm.S  portmacro.h
portable/GCC/PPC405_Xilinx/: FPU_Macros.h  port.c  portasm.S  portmacro.h
portable/GCC/PPC440_Xilinx/: FPU_Macros.h  port.c  portasm.S  portmacro.h
portable/GCC/RI5CY-GAP8/: port.c  port_asm.S  portmacro.h
portable/GCC/RISC-V/: Documentation.url  chip_extensions.cmake  port.c  portASM.S  portContext.h  portmacro.h
portable/GCC/RL78/: isr_support.h  port.c  portasm.S  portmacro.h
portable/GCC/RX100/: port.c  portmacro.h  readme.txt
portable/GCC/RX200/: port.c  portmacro.h
portable/GCC/RX600/: port.c  portmacro.h
portable/GCC/RX600v2/: port.c  portmacro.h
portable/GCC/RX700v3_DPFPU/: port.c  portmacro.h
portable/GCC/STR75x/: port.c  portISR.c  portmacro.h
portable/GCC/TriCore_1782/: port.c  portmacro.h  porttrap.c
portable/GCC/TriCore_38xa/: port.c  port.h  portmacro.h  porttrap.c  readme.txt
portable/Heap/: block_map.c  block_map.h  cluster_group.c  cluster_group.h  heap.c  heap.h  heap_block.c  heap_block.h  heap_internal.h  offset_index.c  offset_index.h  parent_group.c  parent_group.h
portable/IAR/78K0R/: ISR_Support.h  port.c  (+2 more)
portable/MSVC-MingW/: port.c  portmacro.h
portable/MemMang/: CMakeLists.txt  heap_1.c  heap_2.c  heap_3.c  heap_4.c  heap_5.c  heap_6.c  heap_6.h
portable/template/: port.c  portmacro.h
(+724 files in other folders)
